# deep-researcher

./: .pre-commit-config.yaml  README.en.md  README.md  demo_app.py  pyproject.toml  quick_start.py  使用指南.md
.github/workflows/: ci.yml
configs/deep_research/tools/: Search.tool.yaml
configs/markdown_report_writer/tools/: DetectUserChanges.tool.yaml
nexdr/agents/: hooks.py  tool_types.py
nexdr/agents/deep_research/: arxiv_search.py  search.py  semantic_scholar_search.py  serper_search.py  update_search_resources.py  web_search.py
nexdr/agents/doc_reader/: doc_preprocess.py  file_parser.py  image_caption.py  reader.py  retrieval.py
nexdr/agents/html_creator/: finish.py  html_create.py  initialize_design.py  insert_page.py  merge_slides.py  update_page.py
nexdr/agents/markdown_report_writer/: __init__.py  detect_user_changes.py
nexdr/utils/: update_citation.py
tests/: __init__.py  conftest.py  test_detect_user_changes.py  test_file_parser.py  test_semantic_scholar_search.py  test_tool_types.py
