[project]
name = "nexdr"
version = "0.1.0"
description = "Nex Deep Research"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.0.0",
    "requests>=2.25.0",
    "jinja2>=3.0.0",
    "beautifulsoup4>=4.9.0",
    "openai>=1.0.0",
    "httpx[socks]>=0.25.0",
    "mcp>=1.12.3",
    "lark_oapi>=1.4.0",
    "sqlmodel>=0.0.18",
    "pytest>=7.0.0",
    "streamlit>=1.48.0",
    "plotly>=6.2.0",
    "pandas>=2.3.1",
    "langfuse>=3.2.3",
    "tiktoken>=0.5.0",
    "python-dotenv>=1.0.0",
    "arxiv>=2.1.0",
    "chardet>=5.2.0",
    "pdfdeal>=1.0.2",
    "markitdown[all]>=0.1.2",
    "pymupdf>=1.26.3",
    "asyncer>=0.0.8",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "aiohttp>=3.12.15",
    "volcengine>=1.0.198",
    "fastmcp==2.11.3",
    "fastapi>=0.116.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "chainlit",
    "jupyter-client>=8.6.3",
    "diskcache>=5.6.3",
    "bash-kernel>=0.10.0",
    "asyncpg>=0.30.0",
    "nexau @git+https://github.com/nex-agi/nexau",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "black>=22.0.0", "flake8>=5.0.0", "mypy>=1.0.0"]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = [".", "src"]
include = ["src*"]

[tool.setuptools.package-dir]
"" = "."

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
    "pre-commit>=4.3.0",
    "types-requests>=2.32.4.20250809",
    "types-PyYAML>=6.0.0",
    "isort>=5.13.0",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[dependency-groups]
dev = [
    "pytest-asyncio>=1.1.0",
    "types-requests>=2.32.4.20250809",
]

# ============================================================================
# Mypy Configuration
# ============================================================================
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true
pretty = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = true

# ============================================================================
# Pytest Configuration
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ============================================================================
# Coverage Configuration
# ============================================================================
[tool.coverage.run]
source = ["nexdr"]
branch = true
omit = [
    "tests/*",
    "*/__pycache__/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
show_missing = true
skip_covered = true

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ============================================================================
# isort Configuration
# ============================================================================
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
known_first_party = ["nexdr"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[project.scripts]
start = "server:main"
